# US_college_admission_counseling

./: .dockerignore  .gitignore  Dockerfile  README.md  TEST_RESULTS.md  docker-compose.yml
backend/: .env.docker.example  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240528_01_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  essays.py  evaluations.py  milestones.py  suggestions.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: academic_record.py  applicant.py  essay.py  evaluation.py  extracurricular.py  milestone.py  suggestion.py
backend/app/repositories/: academic_records.py  applicants.py  base.py  essays.py  evaluations.py  extracurriculars.py  milestones.py  suggestions.py
backend/app/schemas/: auth.py  essay.py  evaluation.py  milestone.py  suggestion.py
backend/app/services/: essays.py  evaluation.py  openai_client.py  recommendations.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_essays.py  test_milestones.py
docs/: api.md  compliance.md  prompts.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: AppShell.css  AppShell.tsx  EssayFeedbackPanel.tsx  EvaluationSummaryCard.tsx  RecommendationList.tsx  Timeline.css  Timeline.tsx
frontend/src/pages/: EssaysPage.tsx  (+3 more)
scripts/: deploy_to_gce.sh
