[tool.poetry]
name = "us-college-counseling-backend"
version = "0.1.0"
description = "FastAPI backend for US college admissions counseling platform"
authors = ["Auto Generated <noreply@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
sqlalchemy = {version = "^2.0.25", extras = ["asyncio"]}
aiosqlite = "^0.19.0"
openai = "^1.14.0"
python-jose = "^3.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
